# chess

./: .gitignore  .gitmodules  Cargo.lock.bak  Cargo.toml  README.md  checkpoint.sh  stay.sh
chess-core/: Cargo.toml
chess-core/src/: \  constants.rs  helper.rs  layout.rs  lib.rs  msg.rs  traits.rs  types.rs
chess-core/src/game/: math.rs  mod.rs
chess-derive/: Cargo.toml
chess-derive/src/: lib.rs
chess-game/: Cargo.bak  Cargo.toml
chess-game/interactive-tests/: click-tile-test.rs  load_image_from_mem_main.rs
chess-game/src/: main.rs
chess-ray/: Cargo.toml
chess-ray/assets/: do.sh
chess-ray/interactive-tests/: load_image_from_mem_main.rs
chess-ray/src/: image_data.rs  main.rs  utils.rs
chess-server/: Cargo.toml
chess-server/src/: lib.rs
core/: Cargo.toml
core/src/: constants.rs  lib.rs  msg.rs  traits.rs
docs/: tabs.txt
engine/: Cargo.toml
engine/src/: lib.rs
examples/: funky-demo.rs
