[package]
name = "chess-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chess-derive = { path = "../chess-derive" }
const_typed_builder = "0.3.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
serde_with = "3.4.0"
