[package]
name = "chess-derive"
version = "0.1.0"
edition = "2021"
description = "Derive procedural macros for the chess-core crate"
license = "MIT" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }

