[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"
default-run = "chess-game"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "interactive-tests/load_image_from_mem_main.rs"
name = "static-img"

[[bin]]
path = "interactive-tests/click-tile-test.rs"
name = "click-tile-test"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chess-core = { path = "../chess-core" }
chess-server = { path = "../chess-server" }
const_typed_builder = "0.3.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.11"
crossbeam-utils = "0.8.19"
hashbrown = "0.14.3"
paste = "1.0.14"
# raylib = "3.7"
[dependencies.raylib]
# git = "https://github.com/JulianGmp/raylib-rs"
# branch = "refactor_load_image_from_mem"
git = "https://github.com/IoIxD/raylib-rs"
# branch = "update-useable-fork"
# rscenes = { version = "1.4.2", features = ["ecs", "hecs"] }
