[package]
name = "chess-server"
version = "0.1.0"
edition = "2021"
description = "Reserved for chess-core crate"
license = "MIT"

[dependencies]
chess-core = { path = "../chess-core", version = "0.1.0" }
chess-derive = { path = "../chess-derive", version = "0.1.0" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-queue"] }
