[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "nearly-headless-chess"
path = "src/bin/headless-chess.rs"

[dependencies]
core = { path = "../core" }
bevy = { version = "0.12", default-features = false }
rstest = "0.18.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
